[project]
name = "scheduler"
version = "0.1.1"
description = "DTSC 5501 Group Project #1: Campus Event Scheduling System"
requires-python = ">=3.10"
authors = [
    { name = "Stephanie Bie", email = "stephanie.bie@colorado.edu" },
    { name = "Dnyanada Bhosale", email = "dnyanada.bhosale@colorado.edu" },
    { name = "Augustine Joy", email = "augustine.joy@colorado.edu" },
]
dependencies = [
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]